--- a/css/map.css
+++ b/css/map.css
@@ -1,7 +1,7 @@
 #map {
   height: 400px;
   width: 800px;
-  background-color: #eaeaea;
+  background-color: white;
   margin: 30px auto;
 }
 
@@ -41,4 +41,7 @@ h1 {
 .address-area input[type=submit]:hover {
 	background-color: #0064ff;
 	cursor: pointer;
+}
+.draw-yard h1 {
+	display: none;
 }
